velero/velero-v1.9.4-linux-amd64/examples/minio/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-minio
  namespace: velero
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: minio.jaehun.shop
    http:
      paths:
      - backend:
          service:
            name: minio 
            port:
              number: 9001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - minio.jaehun.shop
    secretName: velero-ssl
